--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     buildToolsVersion "29.0.0"
     defaultConfig {
-        applicationId "com.bappedemo.tourmate"
+        applicationId "com.bitmproject.tourmate"
         minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
